--- a/ds/notebook.ipynb
+++ b/ds/notebook.ipynb
@@ -2,16 +2,397 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e8339e64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import necessary libraries\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
+    "from sklearn.metrics import accuracy_score, roc_auc_score, classification_report, confusion_matrix, roc_curve, auc\n",
+    "\n",
+    "# Basline Model\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "# Tree-Based Models\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "# Gradient Boosting Models\n",
+    "from xgboost import XGBClassifier\n",
+    "from lightgbm import LGBMClassifier\n",
+    "from catboost import CatBoostClassifier\n",
+    "\n",
+    "# Scaling (for Logistic Regression)\n",
+    "from sklearn.preprocessing import StandardScaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2a93a2ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Park Name</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Primary Location</th>\n",
+       "      <th>Second Location</th>\n",
+       "      <th>Third Location</th>\n",
+       "      <th>Date established as park</th>\n",
+       "      <th>Area in acres</th>\n",
+       "      <th>Area in km squares</th>\n",
+       "      <th>Recreation visitors (2021)</th>\n",
+       "      <th>Description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Acadia</td>\n",
+       "      <td>﻿44.35°N</td>\n",
+       "      <td>68.21°W</td>\n",
+       "      <td>Maine</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>February 26, 1919</td>\n",
+       "      <td>49,071.40</td>\n",
+       "      <td>198.6</td>\n",
+       "      <td>4,069,098</td>\n",
+       "      <td>Covering most of Mount Desert Island and other...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>American Samoa</td>\n",
+       "      <td>﻿14.25°S</td>\n",
+       "      <td>170.68°W</td>\n",
+       "      <td>American Samoa</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>October 31, 1988</td>\n",
+       "      <td>8,256.67</td>\n",
+       "      <td>33.4</td>\n",
+       "      <td>8,495</td>\n",
+       "      <td>The southernmost national park is on three Sam...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Arches</td>\n",
+       "      <td>﻿38.68°N</td>\n",
+       "      <td>109.57°W</td>\n",
+       "      <td>Utah</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>November 12, 1971</td>\n",
+       "      <td>76,678.98</td>\n",
+       "      <td>310.3</td>\n",
+       "      <td>1,806,865</td>\n",
+       "      <td>This site features more than 2,000 natural san...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Badlands</td>\n",
+       "      <td>﻿43.75°N</td>\n",
+       "      <td>102.50°W</td>\n",
+       "      <td>South Dakota</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>November 10, 1978</td>\n",
+       "      <td>242,755.94</td>\n",
+       "      <td>982.4</td>\n",
+       "      <td>1,224,226</td>\n",
+       "      <td>The Badlands are a collection of buttes, pinna...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Big Bend</td>\n",
+       "      <td>﻿29.25°N</td>\n",
+       "      <td>103.25°W</td>\n",
+       "      <td>Texas</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>June 12, 1944</td>\n",
+       "      <td>801,163.21</td>\n",
+       "      <td>3,242.2</td>\n",
+       "      <td>581,220</td>\n",
+       "      <td>Named for the prominent bend in the Rio Grande...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Park Name  Latitude Longitude Primary Location Second Location  \\\n",
+       "0          Acadia  ﻿44.35°N   68.21°W            Maine             NaN   \n",
+       "1  American Samoa  ﻿14.25°S  170.68°W   American Samoa             NaN   \n",
+       "2          Arches  ﻿38.68°N  109.57°W             Utah             NaN   \n",
+       "3        Badlands  ﻿43.75°N  102.50°W     South Dakota             NaN   \n",
+       "4        Big Bend  ﻿29.25°N  103.25°W            Texas             NaN   \n",
+       "\n",
+       "  Third Location Date established as park Area in acres Area in km squares  \\\n",
+       "0            NaN        February 26, 1919     49,071.40             198.6    \n",
+       "1            NaN         October 31, 1988      8,256.67              33.4    \n",
+       "2            NaN        November 12, 1971     76,678.98             310.3    \n",
+       "3            NaN        November 10, 1978    242,755.94             982.4    \n",
+       "4            NaN            June 12, 1944    801,163.21           3,242.2    \n",
+       "\n",
+       "  Recreation visitors (2021)  \\\n",
+       "0                  4,069,098   \n",
+       "1                      8,495   \n",
+       "2                  1,806,865   \n",
+       "3                  1,224,226   \n",
+       "4                    581,220   \n",
+       "\n",
+       "                                         Description  \n",
+       "0  Covering most of Mount Desert Island and other...  \n",
+       "1  The southernmost national park is on three Sam...  \n",
+       "2  This site features more than 2,000 natural san...  \n",
+       "3  The Badlands are a collection of buttes, pinna...  \n",
+       "4  Named for the prominent bend in the Rio Grande...  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# load the dataset and set certain arguments to read the data correctly.\n",
+    "df = pd.read_csv('us_national_parks.csv')\n",
+    "\n",
+    "# Display the first few rows of the dataset\n",
+    "display(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "2bde0471",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The DataFrame has 63 rows and 11 columns.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Determining the size of the DataFrame\n",
+    "n_rows, n_cols = df.shape\n",
+    "print(f\"The DataFrame has {n_rows} rows and {n_cols} columns.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "98082699",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert the column names to lowercase and at underscore instead of spaces\n",
+    "df.columns = df.columns.str.lower().str.replace(' ', '_')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6a1dad71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop columns that are not needed for analysis\n",
+    "df.drop(columns=['park_name', 'second_location', 'third_location', 'date_established_as_park', 'description'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "368da4ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 63 entries, 0 to 62\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column                      Non-Null Count  Dtype \n",
+      "---  ------                      --------------  ----- \n",
+      " 0   latitude                    63 non-null     object\n",
+      " 1   longitude                   63 non-null     object\n",
+      " 2   primary_location            63 non-null     object\n",
+      " 3   area_in_acres               63 non-null     object\n",
+      " 4   area_in_km_squares          63 non-null     object\n",
+      " 5   recreation_visitors_(2021)  63 non-null     object\n",
+      "dtypes: object(6)\n",
+      "memory usage: 3.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Display informative summary of the DataFrame\n",
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "80c7ae9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>primary_location</th>\n",
+       "      <th>area_in_acres</th>\n",
+       "      <th>area_in_km_squares</th>\n",
+       "      <th>recreation_visitors_(2021)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>63</td>\n",
+       "      <td>63</td>\n",
+       "      <td>63</td>\n",
+       "      <td>63</td>\n",
+       "      <td>63</td>\n",
+       "      <td>63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>61</td>\n",
+       "      <td>62</td>\n",
+       "      <td>30</td>\n",
+       "      <td>63</td>\n",
+       "      <td>62</td>\n",
+       "      <td>63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>﻿58.50°N</td>\n",
+       "      <td>110.50°W</td>\n",
+       "      <td>California</td>\n",
+       "      <td>49,071.40</td>\n",
+       "      <td>108.0</td>\n",
+       "      <td>4,069,098</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        latitude longitude primary_location area_in_acres area_in_km_squares  \\\n",
+       "count         63        63               63            63                 63   \n",
+       "unique        61        62               30            63                 62   \n",
+       "top     ﻿58.50°N  110.50°W       California     49,071.40             108.0    \n",
+       "freq           2         2                9             1                  2   \n",
+       "\n",
+       "       recreation_visitors_(2021)  \n",
+       "count                          63  \n",
+       "unique                         63  \n",
+       "top                     4,069,098  \n",
+       "freq                            1  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Display descriptive statistics of the DataFrame\n",
+    "display(df.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bfa3b1c3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c26ff443",
    "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
