--- a/ds/notebook.ipynb
+++ b/ds/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "e8339e64",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "2a93a2ea",
    "metadata": {},
    "outputs": [
@@ -177,19 +177,268 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>X</th>\n",
+       "      <th>Y</th>\n",
+       "      <th>OSMPTrailheadsOSMPOBJECTID</th>\n",
+       "      <th>OSMPTrailheadsOSMPRESTROOMS</th>\n",
+       "      <th>OSMPTrailheadsOSMPPICNIC</th>\n",
+       "      <th>OSMPTrailheadsOSMPFISHING</th>\n",
+       "      <th>OSMPTrailheadsOSMPX</th>\n",
+       "      <th>OSMPTrailheadsOSMPY</th>\n",
+       "      <th>OSMPTrailheadsOSMPELEVATION</th>\n",
+       "      <th>OSMPTrailheadsOSMPAKA</th>\n",
+       "      <th>...</th>\n",
+       "      <th>OSMPTrailheadsOSMPDATETO</th>\n",
+       "      <th>OSMPTrailheadsOSMPDATENOTES</th>\n",
+       "      <th>OSMPTrailheadsOSMPRECYCLEBIN</th>\n",
+       "      <th>OSMPTrailheadsOSMPDOGCOMPOST</th>\n",
+       "      <th>OSMPTrailheadsOSMPTHNAME</th>\n",
+       "      <th>OSMPTrailheadsOSMPTHLEASH</th>\n",
+       "      <th>OSMPTrailheadsOSMPTHURL</th>\n",
+       "      <th>OSMPTrailHeadURLOBJECTID</th>\n",
+       "      <th>OSMPTrailHeadURLTH_URL</th>\n",
+       "      <th>OSMPTrailHeadURLACCESSID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-105.294556</td>\n",
+       "      <td>40.006501</td>\n",
+       "      <td>18</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>-105.294556</td>\n",
+       "      <td>-105.294556</td>\n",
+       "      <td>6044</td>\n",
+       "      <td></td>\n",
+       "      <td>...</td>\n",
+       "      <td>2099-12-31T00:00:00.000Z</td>\n",
+       "      <td>Date from is unknown.</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Halfway House</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>32</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>284</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-105.309073</td>\n",
+       "      <td>39.997336</td>\n",
+       "      <td>19</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>-105.309073</td>\n",
+       "      <td>-105.309073</td>\n",
+       "      <td>6755</td>\n",
+       "      <td></td>\n",
+       "      <td>...</td>\n",
+       "      <td>2099-12-31T00:00:00.000Z</td>\n",
+       "      <td>Date from is unknown.</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Realization Point</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>https://bouldercolorado.gov/osmp/realization-p...</td>\n",
+       "      <td>33</td>\n",
+       "      <td>https://bouldercolorado.gov/osmp/realization-p...</td>\n",
+       "      <td>272</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-105.258057</td>\n",
+       "      <td>39.938595</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>-105.258057</td>\n",
+       "      <td>-105.258057</td>\n",
+       "      <td>5621</td>\n",
+       "      <td></td>\n",
+       "      <td>...</td>\n",
+       "      <td>2099-12-31T00:00:00.000Z</td>\n",
+       "      <td>Date from is unknown.</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>South Mesa</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>https://bouldercolorado.gov/osmp/south-mesa-tr...</td>\n",
+       "      <td>34</td>\n",
+       "      <td>https://bouldercolorado.gov/osmp/south-mesa-tr...</td>\n",
+       "      <td>201</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-105.256649</td>\n",
+       "      <td>39.938244</td>\n",
+       "      <td>22</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>-105.256649</td>\n",
+       "      <td>-105.256649</td>\n",
+       "      <td>5634</td>\n",
+       "      <td></td>\n",
+       "      <td>...</td>\n",
+       "      <td>2099-12-31T00:00:00.000Z</td>\n",
+       "      <td>Date from is unknown.</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Doudy Draw</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>https://bouldercolorado.gov/osmp/doudy-draw-tr...</td>\n",
+       "      <td>35</td>\n",
+       "      <td>https://bouldercolorado.gov/osmp/doudy-draw-tr...</td>\n",
+       "      <td>101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-105.275469</td>\n",
+       "      <td>39.978708</td>\n",
+       "      <td>32</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>-105.275469</td>\n",
+       "      <td>-105.275469</td>\n",
+       "      <td>6110</td>\n",
+       "      <td></td>\n",
+       "      <td>...</td>\n",
+       "      <td>2099-12-31T00:00:00.000Z</td>\n",
+       "      <td>Date from is unknown.</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NCAR</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>36</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>235</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 44 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            X          Y  OSMPTrailheadsOSMPOBJECTID  \\\n",
+       "0 -105.294556  40.006501                          18   \n",
+       "1 -105.309073  39.997336                          19   \n",
+       "2 -105.258057  39.938595                          21   \n",
+       "3 -105.256649  39.938244                          22   \n",
+       "4 -105.275469  39.978708                          32   \n",
+       "\n",
+       "  OSMPTrailheadsOSMPRESTROOMS OSMPTrailheadsOSMPPICNIC  \\\n",
+       "0                         Yes                      Yes   \n",
+       "1                         Yes                      Yes   \n",
+       "2                         Yes                      Yes   \n",
+       "3                          No                       No   \n",
+       "4                          No                       No   \n",
+       "\n",
+       "  OSMPTrailheadsOSMPFISHING  OSMPTrailheadsOSMPX  OSMPTrailheadsOSMPY  \\\n",
+       "0                        No          -105.294556          -105.294556   \n",
+       "1                        No          -105.309073          -105.309073   \n",
+       "2                       Yes          -105.258057          -105.258057   \n",
+       "3                        No          -105.256649          -105.256649   \n",
+       "4                        No          -105.275469          -105.275469   \n",
+       "\n",
+       "   OSMPTrailheadsOSMPELEVATION OSMPTrailheadsOSMPAKA  ...  \\\n",
+       "0                         6044                        ...   \n",
+       "1                         6755                        ...   \n",
+       "2                         5621                        ...   \n",
+       "3                         5634                        ...   \n",
+       "4                         6110                        ...   \n",
+       "\n",
+       "   OSMPTrailheadsOSMPDATETO OSMPTrailheadsOSMPDATENOTES  \\\n",
+       "0  2099-12-31T00:00:00.000Z       Date from is unknown.   \n",
+       "1  2099-12-31T00:00:00.000Z       Date from is unknown.   \n",
+       "2  2099-12-31T00:00:00.000Z       Date from is unknown.   \n",
+       "3  2099-12-31T00:00:00.000Z       Date from is unknown.   \n",
+       "4  2099-12-31T00:00:00.000Z       Date from is unknown.   \n",
+       "\n",
+       "  OSMPTrailheadsOSMPRECYCLEBIN OSMPTrailheadsOSMPDOGCOMPOST  \\\n",
+       "0                           No                          Yes   \n",
+       "1                           No                           No   \n",
+       "2                          Yes                          Yes   \n",
+       "3                           No                           No   \n",
+       "4                           No                           No   \n",
+       "\n",
+       "  OSMPTrailheadsOSMPTHNAME OSMPTrailheadsOSMPTHLEASH  \\\n",
+       "0            Halfway House                       Yes   \n",
+       "1        Realization Point                       Yes   \n",
+       "2               South Mesa                       Yes   \n",
+       "3               Doudy Draw                       Yes   \n",
+       "4                     NCAR                       Yes   \n",
+       "\n",
+       "                             OSMPTrailheadsOSMPTHURL  \\\n",
+       "0                                                NaN   \n",
+       "1  https://bouldercolorado.gov/osmp/realization-p...   \n",
+       "2  https://bouldercolorado.gov/osmp/south-mesa-tr...   \n",
+       "3  https://bouldercolorado.gov/osmp/doudy-draw-tr...   \n",
+       "4                                                NaN   \n",
+       "\n",
+       "   OSMPTrailHeadURLOBJECTID  \\\n",
+       "0                        32   \n",
+       "1                        33   \n",
+       "2                        34   \n",
+       "3                        35   \n",
+       "4                        36   \n",
+       "\n",
+       "                              OSMPTrailHeadURLTH_URL  OSMPTrailHeadURLACCESSID  \n",
+       "0                                                NaN                       284  \n",
+       "1  https://bouldercolorado.gov/osmp/realization-p...                       272  \n",
+       "2  https://bouldercolorado.gov/osmp/south-mesa-tr...                       201  \n",
+       "3  https://bouldercolorado.gov/osmp/doudy-draw-tr...                       101  \n",
+       "4                                                NaN                       235  \n",
+       "\n",
+       "[5 rows x 44 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "# load the dataset and set certain arguments to read the data correctly.\n",
-    "df = pd.read_csv('us_national_parks.csv')\n",
+    "parks = pd.read_csv('us_national_parks.csv')\n",
+    "trails = pd.read_csv('trail_heads.csv')\n",
     "\n",
     "# Display the first few rows of the dataset\n",
-    "display(df.head())"
+    "display(parks.head())\n",
+    "display(trails.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "2bde0471",
    "metadata": {},
    "outputs": [
@@ -197,41 +446,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The DataFrame has 63 rows and 11 columns.\n"
+      "The DataFrame has 63 rows and 11 columns.\n",
+      "The DataFrame has 36 rows and 44 columns.\n"
      ]
     }
    ],
    "source": [
     "# Determining the size of the DataFrame\n",
-    "n_rows, n_cols = df.shape\n",
+    "n_rows, n_cols = parks.shape\n",
+    "print(f\"The DataFrame has {n_rows} rows and {n_cols} columns.\")\n",
+    "\n",
+    "# Determining the size of the DataFrame\n",
+    "n_rows, n_cols = trails.shape\n",
     "print(f\"The DataFrame has {n_rows} rows and {n_cols} columns.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "98082699",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Convert the column names to lowercase and at underscore instead of spaces\n",
-    "df.columns = df.columns.str.lower().str.replace(' ', '_')"
+    "parks.columns = parks.columns.str.lower().str.replace(' ', '_')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "6a1dad71",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Drop columns that are not needed for analysis\n",
-    "df.drop(columns=['park_name', 'second_location', 'third_location', 'date_established_as_park', 'description'], inplace=True)"
+    "parks.drop(columns=['park_name', 'second_location', 'third_location', 'date_established_as_park', 'description'], inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "368da4ac",
    "metadata": {},
    "outputs": [
@@ -257,12 +511,12 @@
    ],
    "source": [
     "# Display informative summary of the DataFrame\n",
-    "df.info()"
+    "parks.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "80c7ae9b",
    "metadata": {},
    "outputs": [
@@ -356,7 +610,7 @@
    ],
    "source": [
     "# Display descriptive statistics of the DataFrame\n",
-    "display(df.describe())"
+    "display(parks.describe())"
    ]
   },
   {
