--- a/ds/notebook.ipynb
+++ b/ds/notebook.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "2a93a2ea",
    "metadata": {},
    "outputs": [
@@ -429,16 +429,14 @@
    "source": [
     "# load the dataset and set certain arguments to read the data correctly.\n",
     "parks = pd.read_csv('us_national_parks.csv')\n",
-    "trails = pd.read_csv('trail_heads.csv')\n",
     "\n",
     "# Display the first few rows of the dataset\n",
-    "display(parks.head())\n",
-    "display(trails.head())"
+    "display(parks.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "2bde0471",
    "metadata": {},
    "outputs": [
@@ -454,10 +452,6 @@
    "source": [
     "# Determining the size of the DataFrame\n",
     "n_rows, n_cols = parks.shape\n",
-    "print(f\"The DataFrame has {n_rows} rows and {n_cols} columns.\")\n",
-    "\n",
-    "# Determining the size of the DataFrame\n",
-    "n_rows, n_cols = trails.shape\n",
     "print(f\"The DataFrame has {n_rows} rows and {n_cols} columns.\")"
    ]
   },
